Experimental changes trying to figure out why we're running out of connections. Have to jump on something else.